--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -17,6 +17,7 @@
       @media (max-width: 750px) {
         height: 380px;
       }
+
       @media (max-width: 400px) {
         height: 320px;
       }
@@ -78,6 +79,8 @@
     font-style: italic;
     padding: 0 20px;
     margin-bottom: 30px;
+    font-size: 14px;
+    line-height: 24px;
   }
 
   &__share {
